LoyaltyApp/force-app/main/default/objects/Loyalty_Member_Bonus__c/Loyalty_Member_Bonus__c.object-meta.xml
<CustomObject>
    <label>Loyalty Member Bonus</label>
    <nameField>
        <displayFormat>MB{0000000000}</displayFormat>
        <label>Loyalty Member Bonus Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Member Bonuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>