LoyaltyApp/force-app/main/default/objects/Loyalty_Member_Bonus__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Member Bonuses</relationshipLabel>
    <relationshipName>Loyalty_Member_Bonuses</relationshipName>
    <type>Lookup</type>
</CustomField>