LoyaltyApp/force-app/main/default/objects/Loyalty_Member_Bonus__c/fields/Bonus_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Assigned_Date__c</fullName>
    <label>Bonus Assigned Date</label>
    <type>Date</type>
</CustomField>