LoyaltyApp/force-app/main/default/objects/Loyalty_Member_Bonus__c/fields/Loyalty_Program_Setup_Rule__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Setup_Rule__c</fullName>
    <label>Loyalty Program Setup Rule</label>
    <referenceTo>Loyalty_Program_Setup_Rules__c</referenceTo>
    <relationshipLabel>Loyalty Member Bonuses</relationshipLabel>
    <relationshipName>Loyalty_Member_Bonuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>