LoyaltyApp/force-app/main/default/objects/Loyalty_Member_Bonus__c/fields/Loyalty_Value__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Value__c</fullName>
    <label>Loyalty Value</label>
    <referenceTo>Loyalty_Value__c</referenceTo>
    <relationshipLabel>Loyalty Member Bonuses</relationshipLabel>
    <relationshipName>Loyalty_Member_Bonuses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>